--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
+    "gh-pages": "^3.2.3",
     "json-server": "^0.16.3"
   }
 }
