--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,15 @@
 {
-    "name": "decomp-me-app",
-    "version": "0.1.0",
-    "repository": "https://github.com/ethteck/decomp.me",
     "license": "MIT",
-    "private": true,
     "scripts": {
         "start": "snowpack dev",
         "build": "snowpack build"
     },
+    "dependencies": {
+        "@monaco-editor/react": "^4.2.1",
+        "preact": "^10.5.13"
+    },
     "devDependencies": {
-        "snowpack": "^3.7.1"
+        "@prefresh/snowpack": "^3.0.0",
+        "snowpack": "^3.3.7"
     }
 }
