--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dependencies": {
         "@monaco-editor/react": "^4.2.1",
         "preact": "^10.5.13",
-        "swr": "^0.5.6"
+        "swr": "^0.5.6",
+        "use-debounce": "^7.0.0"
     },
     "devDependencies": {
         "@prefresh/snowpack": "^3.0.0",
