--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "@monaco-editor/react": "^4.2.1",
         "preact": "^10.5.13",
+        "react-simple-resizer": "^2.1.0",
         "swr": "^0.5.6",
         "use-debounce": "^7.0.0"
     },
