--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
         "preact": "^10.5.13",
         "preact-router": "^3.2.1",
         "react-hot-toast": "^2.1.0",
+        "react-loading-skeleton": "^2.2.0",
         "react-simple-resizer": "^2.1.0",
         "swr": "^0.5.6",
         "use-debounce": "^7.0.0"
