--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "devDependencies": {
         "@prefresh/snowpack": "^3.0.0",
         "@snowpack/plugin-postcss": "^1.4.3",
+        "dotenv": "^10.0.0",
         "postcss-scrollbar": "^0.3.0",
         "snowpack": "^3.7.1"
     }
