--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DEBUG=on
 SECRET_KEY=django-insecure-nm#!8%z$hc0wwi#m_*l9l)=m*6gs4&o_^-e5b5vj*k05&yaqc1
-DATABASE_URL=psql://decompme:decompme@127.0.0.1:5432/decompme
+DATABASE_URL=sqlite:///dev.db
 API_BASE=http://127.0.0.1:8000/api
