--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     },
     "dependencies": {
         "@monaco-editor/react": "^4.2.1",
+        "@primer/octicons-react": "^15.0.0",
         "preact": "^10.5.13",
         "preact-router": "^3.2.1",
         "react-hot-toast": "^2.1.0",
