--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "@monaco-editor/react": "^4.2.1",
         "@primer/octicons-react": "^15.0.0",
+        "@react-hook/resize-observer": "^1.2.2",
         "preact": "^10.5.13",
         "react-hot-toast": "^2.1.0",
         "react-loading-skeleton": "^2.2.0",
