Move object files from the filesystem into the database

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,11 @@
 Django
-djangorestframework
-django-cors-headers
-pycparser
-django-environ
-colorama
 ansiwrap
-watchdog
-python-Levenshtein
+colorama
 cxxfilt
+django-cors-headers
+django-environ
+djangorestframework
+psycopg2
+pycparser
+python-Levenshtein
+watchdog
