update frontend for new api

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
         "@monaco-editor/react": "^4.2.1",
         "@primer/octicons-react": "^15.0.0",
         "@react-hook/resize-observer": "^1.2.2",
+        "framer-motion": "^4.1.17",
         "preact": "^10.5.13",
         "react-hot-toast": "^2.1.0",
+        "react-laag": "^2.0.3",
         "react-loading-skeleton": "^2.2.0",
         "react-router-dom": "^5.2.0",
         "react-simple-resizer": "^2.1.0",
