--- a/backend/compilers/ido5.3/config.json
+++ b/backend/compilers/ido5.3/config.json
@@ -1,5 +1,5 @@
 {
     "arch": "mips",
-    "cc": "$COMPILER_PATH/cc -c $CC_OPTS -o $OUTPUT $INPUT",
-    "as" : "mips-linux-gnu-as $AS_OPTS -o $OUTPUT $INPUT"
+    "cc": "TOOLROOT=\"$COMPILER_DIR\" \"$COMPILER_DIR/usr/bin/cc\" -c $CC_OPTS -o \"$OUTPUT\" \"$INPUT\"",
+    "as" : "mips-linux-gnu-as $AS_OPTS -o \"$OUTPUT\" \"$INPUT\""
 }
