Make sandbox easier to configure
- Read `USE_SANDBOX_JAIL` from `.env`
- Rename `SandboxWrapper` -> `Sandbox`
- Remove `--user`/`--group` from `nsjail` wrapper
- Refactor `Dockerfile` to build nsjail

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,7 +31,7 @@ services:
     - type: tmpfs
       # Use a separate tmpfs to prevent a rouge jailed process
       # from filling /tmp on the parent container
-      target: /jailtmp
+      target: /sandbox/tmp
       tmpfs:
         size: 64M
   frontend:
