--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,11 +16,13 @@ services:
     cap_add:
       - setuid
       - setgid
+      - setfcap
     environment:
       DATABASE_URL: psql://decompme:decompme@postgres:5432/decompme
       SECRET_KEY: "django-insecure-nm#!8%z$$hc0wwi#m_*l9l)=m*6gs4&o_^-e5b5vj*k05&yaqc1"
       DEBUG: "on"
       ALLOWED_HOSTS: "localhost,127.0.0.1"
+      USE_SANDBOX_JAIL: "on"
     ports:
     - "8000:8000"
     security_opt:
@@ -29,7 +31,7 @@ services:
     volumes:
     - ./backend:/backend
     - type: tmpfs
-      # Use a separate tmpfs to prevent a rouge jailed process
+      # Use a separate tmpfs to prevent a rogue jailed process
       # from filling /tmp on the parent container
       target: /sandbox/tmp
       tmpfs:
