--- a/backend/compilers/gcc2.8.1/config.json
+++ b/backend/compilers/gcc2.8.1/config.json
@@ -1,4 +1,4 @@
 {
     "arch": "mips",
-    "cc": "cpp $CPP_OPTS -ffreestanding \"$INPUT\" -o \"$OUTPUT\".i && \"${COMPILER_DIR}/gcc\" $CC_OPTS \"$INPUT\".i -o \"$OUTPUT\""
+    "cc": "\"${COMPILER_DIR}\"/gcc -c -B \"${COMPILER_DIR}\"/ $CC_OPTS \"$INPUT\" -o \"$OUTPUT\""
 }
