fix monaco bugs

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,11 @@
         "build": "snowpack build --polyfill-node"
     },
     "dependencies": {
+        "@monaco-editor/react": "^4.2.2",
         "@primer/octicons-react": "^15.0.0",
         "@react-hook/resize-observer": "^1.2.2",
         "framer-motion": "^4.1.17",
+        "monaco-editor": "^0.27.0",
         "preact": "^10.5.13",
         "react-hot-toast": "^2.1.0",
         "react-laag": "^2.0.3",
@@ -15,8 +17,7 @@
         "react-router-dom": "^5.2.0",
         "react-simple-resizer": "^2.1.0",
         "swr": "^0.5.6",
-        "use-debounce": "^7.0.0",
-        "use-monaco": "^0.0.40"
+        "use-debounce": "^7.0.0"
     },
     "devDependencies": {
         "@prefresh/snowpack": "^3.0.0",
