--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,5 +3,9 @@
         "jsx": "preserve",
         "jsxFactory": "h",
         "jsxFragmentFactory": "Fragment",
-    }
+        "module": "esnext",
+        "moduleResolution": "node",
+    },
+    "lib": ["ESNext"],
+    
 }
