--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "devDependencies": {
         "@prefresh/snowpack": "^3.0.0",
         "@snowpack/plugin-postcss": "^1.4.3",
+        "@types/react-router-dom": "^5.1.8",
         "autoprefixer": "^10.3.1",
         "cssnano": "^5.0.7",
         "dotenv": "^10.0.0",
