--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,8 @@
     "license": "MIT",
     "scripts": {
         "start": "snowpack dev --polyfill-node",
-        "build": "snowpack build --polyfill-node"
+        "build": "snowpack build --polyfill-node",
+        "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
     },
     "dependencies": {
         "@monaco-editor/react": "^4.2.2",
@@ -23,11 +24,16 @@
         "@prefresh/snowpack": "^3.0.0",
         "@snowpack/plugin-postcss": "^1.4.3",
         "@types/react-router-dom": "^5.1.8",
+        "@typescript-eslint/eslint-plugin": "^4.29.3",
+        "@typescript-eslint/parser": "^4.29.3",
         "autoprefixer": "^10.3.1",
         "cssnano": "^5.0.7",
         "dotenv": "^10.0.0",
+        "eslint": "^7.32.0",
+        "eslint-config-preact": "^1.1.4",
         "postcss": "^8.3.6",
         "postcss-scrollbar": "^0.3.0",
-        "snowpack": "^3.7.1"
+        "snowpack": "^3.7.1",
+        "typescript": "3.4.5"
     }
 }
