--- a/.github/workflows/reviewdog.yaml
+++ b/.github/workflows/reviewdog.yaml
@@ -1,19 +1,17 @@
 name: reviewdog
-on: pull_request
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 jobs:
-  eslint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: cd frontend && yarn
-      - uses: reviewdog/action-eslint@v1
-        with:
-          reporter: github-pr-check
-          workdir: frontend
-          eslint_flags: src --ext .js,.jsx,.ts,.tsx
-  typescript:
+  reviewdog:
+    name: reviewdog
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: reviewdog/action-setup@v1
-      - run: cd frontend && yarn && yarn run tsc | reviewdog -f tsc -reporter github-pr-check
+      - run: cd frontend && yarn
+      - run: reviewdog -reporter=github-check
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
