--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
     "scripts": {
         "start": "snowpack dev --polyfill-node",
         "build": "snowpack build --polyfill-node",
-        "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
+        "lint": "tsc && eslint src --ext .js,.jsx,.ts,.tsx"
     },
     "dependencies": {
         "@monaco-editor/react": "^4.2.2",
@@ -31,9 +31,10 @@
         "dotenv": "^10.0.0",
         "eslint": "^7.32.0",
         "eslint-config-preact": "^1.1.4",
+        "eslint-formatter-rdjson": "^1.0.5",
         "postcss": "^8.3.6",
         "postcss-scrollbar": "^0.3.0",
         "snowpack": "^3.7.1",
-        "typescript": "3.4.5"
+        "typescript": "^4.4.2"
     }
 }
