--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: reviewdog/action-setup@v1
       - run: cd frontend && yarn
+      - run: pip install -r backend/requirements.txt
       - run: reviewdog -reporter=github-check
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
