--- a/.reviewdog.yml
+++ b/.reviewdog.yml
@@ -5,3 +5,7 @@ runner:
   tsc:
     cmd: cd frontend && yarn -s run tsc
     format: tsc
+  mypy:
+    cmd: cd backend && mypy --show-column-numbers --show-absolute-path
+    errorformat:
+    - "%f:%l:%c: %t%*[^:]: %m"
