--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -8,7 +8,7 @@ disallow_untyped_calls = True
 disallow_untyped_decorators = True
 ignore_errors = False
 ignore_missing_imports = True
-implicit_reexport = False
+implicit_reexport = True
 strict_optional = True
 strict_equality = True
 no_implicit_optional = True
