--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,4 +1,4 @@
-name: reviewdog
+name: PR
 on:
   push:
     branches:
@@ -17,3 +17,16 @@ jobs:
       - run: reviewdog -reporter=github-check
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
+  django_test:
+    name: django test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v1
+        with:
+          python-version: 3.9.6
+      - run: pip install -r backend/requirements.txt
+      - run: python backend/manage.py test backend
+        env:
+          SYSTEM_ENV: GITHUB_WORKFLOW
