--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           python-version: 3.9.6
       - run: pip install -r backend/requirements.txt
+      - run: ./backend/compilers/download.sh
       - run: python backend/manage.py test backend
         env:
           SYSTEM_ENV: GITHUB_WORKFLOW
