--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
         "@monaco-editor/react": "^4.2.2",
         "@primer/octicons-react": "^15.0.0",
         "@react-hook/resize-observer": "^1.2.2",
+        "dequal": "^2.0.2",
         "framer-motion": "^4.1.17",
         "monaco-editor": "^0.27.0",
         "preact": "^10.5.13",
@@ -18,7 +19,8 @@
         "react-router-dom": "^5.2.0",
         "react-simple-resizer": "^2.1.0",
         "swr": "^1.0.0",
-        "use-debounce": "^7.0.0"
+        "use-debounce": "^7.0.0",
+        "use-deep-compare-effect": "^1.6.1"
     },
     "devDependencies": {
         "@prefresh/snowpack": "^3.0.0",
