Cope with mypy-typechecking asm-differ/m2c

--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -8,6 +8,7 @@ disallow_untyped_calls = True
 disallow_untyped_decorators = True
 ignore_errors = False
 ignore_missing_imports = True
+follow_imports = silent
 implicit_reexport = False
 strict_optional = True
 strict_equality = True
@@ -19,8 +20,8 @@ warn_unreachable = True
 warn_no_return = True
 
 files =
-    coreapp/**.py,
-    decompme/**.py
+    coreapp/**/*.py,
+    decompme/**/*.py
 
 plugins =
     mypy_django_plugin.main,
