--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
         "dequal": "^2.0.2",
         "framer-motion": "^4.1.17",
         "monaco-editor": "^0.27.0",
-        "preact": "^10.5.13",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "react-hot-toast": "^2.1.0",
         "react-laag": "^2.0.3",
         "react-loading-skeleton": "^2.2.0",
@@ -23,8 +24,8 @@
         "use-deep-compare-effect": "^1.6.1"
     },
     "devDependencies": {
-        "@prefresh/snowpack": "^3.0.0",
         "@snowpack/plugin-postcss": "^1.4.3",
+        "@snowpack/plugin-react-refresh": "^2.5.0",
         "@types/react-router-dom": "^5.1.8",
         "@typescript-eslint/eslint-plugin": "^4.29.3",
         "@typescript-eslint/parser": "^4.29.3",
@@ -32,8 +33,8 @@
         "cssnano": "^5.0.7",
         "dotenv": "^10.0.0",
         "eslint": "^7.32.0",
-        "eslint-config-preact": "^1.1.4",
         "eslint-formatter-rdjson": "^1.0.5",
+        "eslint-plugin-react": "^7.26.1",
         "postcss": "^8.3.6",
         "postcss-scrollbar": "^0.3.0",
         "snowpack": "^3.8.8",
