--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
         "framer-motion": "^4.1.17",
         "monaco-editor": "^0.27.0",
         "next": "^11.1.2",
+        "next-pwa": "^5.3.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hot-toast": "^2.1.0",
