add loading progress bar

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -2,7 +2,7 @@
     "name": "decomp.me",
     "short_name": "decomp.me",
     "description": "Decompile code in the browser",
-    "theme_color": "#ffffff",
+    "theme_color": "#951fd9",
     "background_color": "#0c0e12",
     "display": "minimal-ui",
     "orientation": "any",
