--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
         "postinstall": "next telemetry disable > /dev/null"
     },
     "dependencies": {
+        "@badrap/bar-of-progress": "^0.1.2",
         "@monaco-editor/react": "^4.2.2",
         "@primer/octicons-react": "^15.0.0",
         "@react-hook/resize-observer": "^1.2.2",
