--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -2,8 +2,8 @@
     "name": "decomp.me",
     "short_name": "decomp.me",
     "description": "Decompile code in the browser",
-    "theme_color": "#951fd9",
-    "background_color": "#0c0e12",
+    "theme_color": "#301d3a",
+    "background_color": "#22152a",
     "display": "minimal-ui",
     "orientation": "any",
     "scope": "/",
