--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
         "react-laag": "^2.0.3",
         "react-loading-skeleton": "^2.2.0",
         "react-simple-resizer": "^2.1.0",
+        "sass": "^1.42.1",
         "sharp": "^0.29.1",
         "swr": "^1.0.0",
         "use-debounce": "^7.0.0",
@@ -30,6 +31,7 @@
     },
     "devDependencies": {
         "@next/eslint-plugin-next": "^11.1.2",
+        "@svgr/webpack": "^5.5.0",
         "autoprefixer": "^10.3.1",
         "cssnano": "^5.0.7",
         "dotenv": "^10.0.0",
