--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
         "@monaco-editor/react": "^4.2.2",
         "@primer/octicons-react": "^15.0.0",
         "@react-hook/resize-observer": "^1.2.2",
+        "classnames": "^2.3.1",
         "dequal": "^2.0.2",
         "framer-motion": "^4.1.17",
         "monaco-editor": "^0.27.0",
