--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -2,17 +2,22 @@
     "name": "decomp.me",
     "short_name": "decomp.me",
     "description": "Decompile code in the browser",
-    "theme_color": "#301d3a",
-    "background_color": "#22152a",
+    "theme_color": "#951fd9",
+    "background_color": "#292f33",
     "display": "minimal-ui",
     "orientation": "any",
     "scope": "/",
     "start_url": "/",
     "icons": [
         {
-            "src": "frog.png",
-            "sizes": "320x320",
-            "type": "image/png"
+            "src": "purplefrog.svg",
+            "sizes": "48x48 320x320",
+            "purpose": "monochrome"
+        },
+        {
+            "src": "purplefrog-bg.svg",
+            "sizes": "48x48 320x320",
+            "purpose": "maskable"
         }
     ]
 }
