dont use NEXT_PUBLIC_* in .env

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DEBUG=on
 SECRET_KEY=django-insecure-nm#!8%z$hc0wwi#m_*l9l)=m*6gs4&o_^-e5b5vj*k05&yaqc1
 DATABASE_URL=sqlite:///dev.db
-NEXT_PUBLIC_API_BASE=http://127.0.0.1:8000/api
+API_BASE=http://127.0.0.1:8000/api
 USE_SANDBOX_JAIL=off
-NEXT_PUBLIC_GITHUB_CLIENT_ID=93cab6241d55ff042725
+GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
