--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
         "build": "next build",
         "start": "next start --port 8080",
         "lint": "next lint",
-        "postinstall": "next telemetry disable > /dev/null"
+        "postinstall": "next telemetry disable > /dev/null",
+        "storybook": "start-storybook -p 6006 --ci",
+        "build-storybook": "build-storybook"
     },
     "dependencies": {
         "@badrap/bar-of-progress": "^0.1.2",
@@ -31,9 +33,21 @@
         "use-deep-compare-effect": "^1.6.1"
     },
     "devDependencies": {
+        "@babel/core": "^7.15.8",
         "@next/eslint-plugin-next": "^11.1.2",
+        "@storybook/addon-actions": "^6.3.10",
+        "@storybook/addon-essentials": "^6.3.10",
+        "@storybook/addon-links": "^6.3.10",
+        "@storybook/addon-postcss": "^2.0.0",
+        "@storybook/addon-viewport": "^6.3.10",
+        "@storybook/builder-webpack5": "^6.3.10",
+        "@storybook/manager-webpack5": "^6.3.10",
+        "@storybook/preset-scss": "^1.0.3",
+        "@storybook/react": "^6.3.10",
         "@svgr/webpack": "^5.5.0",
         "autoprefixer": "^10.3.1",
+        "babel-loader": "^8.2.2",
+        "css-loader": "^6.4.0",
         "cssnano": "^5.0.7",
         "dotenv": "^10.0.0",
         "eslint": "7",
@@ -42,7 +56,12 @@
         "eslint-plugin-react": "^7.26.1",
         "eslint-plugin-react-hooks": "^4.2.0",
         "postcss": "^8.3.6",
+        "postcss-loader": "^6.1.1",
         "postcss-scrollbar": "^0.3.0",
-        "typescript": "^4.4.2"
+        "sass-loader": "^12.1.0",
+        "storybook-dark-mode": "^1.0.8",
+        "style-loader": "^3.3.0",
+        "typescript": "^4.4.2",
+        "webpack": "5"
     }
 }
