custom monaco editor react component

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,17 @@
     },
     "dependencies": {
         "@badrap/bar-of-progress": "^0.1.2",
-        "@monaco-editor/react": "^4.2.2",
         "@primer/octicons-react": "^15.0.0",
         "@react-hook/resize-observer": "^1.2.2",
         "classnames": "^2.3.1",
         "dequal": "^2.0.2",
         "framer-motion": "^4.1.17",
-        "monaco-editor": "^0.27.0",
+        "is-mobile": "^3.0.0",
+        "monaco-editor": "^0.29.1",
         "next": "^11.1.2",
         "next-pwa": "^5.3.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "^18.0.0-alpha-fd5e01c2e-20210913",
+        "react-dom": "^18.0.0-alpha-fd5e01c2e-20210913",
         "react-hot-toast": "^2.1.0",
         "react-laag": "^2.0.3",
         "react-loading-skeleton": "^2.2.0",
@@ -54,6 +54,8 @@
         "eslint-formatter-rdjson": "^1.0.5",
         "eslint-plugin-react": "^7.26.1",
         "eslint-plugin-react-hooks": "^4.2.0",
+        "monaco-editor-webpack-plugin": "^5.0.0",
+        "next-remove-imports": "^1.0.6",
         "postcss": "^8.3.6",
         "postcss-loader": "^6.1.1",
         "postcss-scrollbar": "^0.3.0",
