remove react-loading-skeleton

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,6 @@
         "react-dom": "^18.0.0-alpha-fd5e01c2e-20210913",
         "react-hot-toast": "^2.1.0",
         "react-laag": "^2.0.3",
-        "react-loading-skeleton": "^2.2.0",
         "react-simple-resizer": "^2.1.0",
         "sass": "^1.42.1",
         "swr": "^1.0.0",
@@ -45,7 +44,7 @@
         "@storybook/react": "^6.3.10",
         "@svgr/webpack": "^5.5.0",
         "autoprefixer": "^10.3.1",
-        "babel-loader": "^8.2.2",
+        "babel-§er": "^8.2.2",
         "css-loader": "^6.4.0",
         "cssnano": "^5.0.7",
         "dotenv": "^10.0.0",
