--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,7 @@
         "@storybook/react": "^6.3.10",
         "@svgr/webpack": "^5.5.0",
         "autoprefixer": "^10.3.1",
-        "babel-§er": "^8.2.2",
+        "babel-loader": "^8.2.2",
         "css-loader": "^6.4.0",
         "cssnano": "^5.0.7",
         "dotenv": "^10.0.0",
