--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,8 @@
         "@storybook/preset-scss": "^1.0.3",
         "@storybook/react": "^6.3.10",
         "@svgr/webpack": "^5.5.0",
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "@typescript-eslint/parser": "^5.0.0",
         "autoprefixer": "^10.3.1",
         "babel-loader": "^8.2.2",
         "css-loader": "^6.4.0",
