--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,11 @@ services:
     volumes:
     - ./postgres:/var/lib/postgresql/data
   backend:
-    build: backend
+    build:
+      context: backend
+      args:
+        # dont install wine32 etc by default
+        ENABLE_PS1_SUPPORT: "NO"
     cap_drop:
       - all
     cap_add:
