--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
         "lint": "next lint && yarn stylelint 'src/**/*.css' 'src/**/*.scss'",
         "postinstall": "next telemetry disable > /dev/null",
         "storybook": "start-storybook -p 6006 --ci",
-        "build-storybook": "build-storybook"
+        "build-storybook": "build-storybook",
+        "test": "jest --watch",
+        "test:ci": "jest --ci"
     },
     "dependencies": {
         "@badrap/bar-of-progress": "^0.1.2",
@@ -43,9 +45,13 @@
         "@storybook/preset-scss": "^1.0.3",
         "@storybook/react": "^6.3.10",
         "@svgr/webpack": "^5.5.0",
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^13.0.0-alpha.1",
+        "@testing-library/user-event": "^13.4.1",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "autoprefixer": "^10.3.1",
+        "babel-jest": "^27.2.5",
         "babel-loader": "^8.2.2",
         "css-loader": "^6.4.0",
         "cssnano": "^5.0.7",
@@ -56,11 +62,16 @@
         "eslint-plugin-css-modules": "^2.11.0",
         "eslint-plugin-react": "^7.26.1",
         "eslint-plugin-react-hooks": "^4.2.0",
+        "eslint-plugin-testing-library": "^4.12.4",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^27.2.5",
+        "jest-transform-stub": "^2.0.0",
         "monaco-editor-webpack-plugin": "^5.0.0",
         "next-remove-imports": "^1.0.6",
         "postcss": "^8.3.6",
         "postcss-loader": "^6.1.1",
         "postcss-scrollbar": "^0.3.0",
+        "react-test-renderer": "^17.0.2",
         "sass-loader": "^12.1.0",
         "storybook-dark-mode": "^1.0.8",
         "style-loader": "^3.3.0",
