--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,7 +18,7 @@ jobs:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   django_test:
-    name: django test
+    name: backend tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -32,9 +32,9 @@ jobs:
         env:
           SYSTEM_ENV: GITHUB_WORKFLOW
 
-  frontend_check:
-    name: check frontend
+  frontend_test:
+    name: frontend tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: cd frontend && yarn && yarn lint && yarn build-storybook
+      - run: cd frontend && yarn && yarn build-storybook && yarn test:ci
