--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -49,9 +49,8 @@ RUN if [ "${ENABLE_PS1_SUPPORT}" = "YES" ] ; then \
     dpkg --add-architecture i386 && apt-get update && \
     apt-get install -y -o APT::Immediate-Configure=false \
         dos2unix \
-        wine && \
-    curl -L https://github.com/mkst/esa/releases/download/binutils-2.251/binutils-2.25.1.tar.gz | \
-        tar zx -C /usr/bin --strip-components 3; fi
+        wine; \
+    fi
 
 WORKDIR /backend
 
