Set mypy.namespace_packages = True

--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -18,6 +18,7 @@ warn_redundant_casts = True
 warn_unused_configs = True
 warn_unreachable = True
 warn_no_return = True
+namespace_packages = True
 
 files =
     coreapp/**/*.py,
