Rename cc_opts to compiler_flags across the board (fixes #168)

--- a/backend/compilers/ee-gcc2.96/config.json
+++ b/backend/compilers/ee-gcc2.96/config.json
@@ -1,4 +1,4 @@
 {
     "platform": "ps2",
-    "cc": "\"${COMPILER_DIR}\"/bin/ee-gcc -c -B \"${COMPILER_DIR}\"/bin/ee- $CC_OPTS \"$INPUT\" -o \"$OUTPUT\""
+    "cc": "\"${COMPILER_DIR}\"/bin/ee-gcc -c -B \"${COMPILER_DIR}\"/bin/ee- $COMPILER_FLAGS \"$INPUT\" -o \"$OUTPUT\""
 }
