--- a/backend/compilers/ido5.3/config.json
+++ b/backend/compilers/ido5.3/config.json
@@ -1,4 +1,4 @@
 {
     "platform": "n64",
-    "cc": "TOOLROOT=\"$COMPILER_DIR\" \"$COMPILER_DIR/usr/bin/cc\" -c -Xcpluscomm -G0 -non_shared -Wab,-r4300_mul -woff 649,838,712 -32 $CC_OPTS -o \"$OUTPUT\" \"$INPUT\""
+    "cc": "TOOLROOT=\"$COMPILER_DIR\" \"$COMPILER_DIR/usr/bin/cc\" -c -Xcpluscomm -G0 -non_shared -Wab,-r4300_mul -woff 649,838,712 -32 $COMPILER_FLAGS -o \"$OUTPUT\" \"$INPUT\""
 }
