--- a/backend/compilers/gcc2.8.1/config.json
+++ b/backend/compilers/gcc2.8.1/config.json
@@ -1,4 +1,4 @@
 {
     "platform": "n64",
-    "cc": "\"${COMPILER_DIR}\"/gcc -G0 -c -B \"${COMPILER_DIR}\"/ $CC_OPTS \"$INPUT\" -o \"$OUTPUT\""
+    "cc": "\"${COMPILER_DIR}\"/gcc -G0 -c -B \"${COMPILER_DIR}\"/ $COMPILER_FLAGS \"$INPUT\" -o \"$OUTPUT\""
 }
