--- a/backend/compilers/mwcc_247_92/config.json
+++ b/backend/compilers/mwcc_247_92/config.json
@@ -1,4 +1,4 @@
 {
     "platform": "gc_wii",
-    "cc": "wine \"${COMPILER_DIR}/mwcceppc.exe\" -c -proc gekko -fp hard -nostdinc ${CC_OPTS} -o \"${OUTPUT}\" \"${INPUT}\""
+    "cc": "wine \"${COMPILER_DIR}/mwcceppc.exe\" -c -proc gekko -nostdinc ${CC_OPTS} -o \"${OUTPUT}\" \"${INPUT}\""
 }
