--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -27,6 +27,11 @@ jobs:
           python-version: 3.9
       - run: pip install -r backend/requirements.txt
         name: Install Python dependencies
+      - run: |
+          git clone --recursive --branch=3.0 https://github.com/google/nsjail && cd nsjail
+          make
+          sudo make install
+        name: Install nsjail
       - run: sudo apt install binutils-mips-linux-gnu
         name: Install binutils-mips-linux-gnu
       - run: ./backend/compilers/download.sh
