--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -32,7 +32,7 @@ jobs:
       - run: |
           git clone --recursive --branch=3.0 https://github.com/google/nsjail && cd nsjail
           make
-          sudo make install
+          sudo cp nsjail /usr/bin/
         name: Install nsjail
       - run: ./backend/compilers/download.sh
         name: Download compilers
