Hide wine's warnings

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -51,7 +51,9 @@ RUN if [ "${ENABLE_PS1_SUPPORT}" = "YES" ] || [ "${ENABLE_GC_WII_SUPPORT}" = "YE
     dpkg --add-architecture i386 && apt-get update && \
     apt-get install -y -o APT::Immediate-Configure=false \
         wine; \
-    fi
+    fi && \
+    mkdir -p /wine && \
+    WINEPREFIX=/wine winecfg
 
 # ps1 specifics
 RUN if [ "${ENABLE_PS1_SUPPORT}" = "YES" ] ; then \
