--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -27,17 +27,23 @@ jobs:
           python-version: 3.9
       - run: pip install -r backend/requirements.txt
         name: Install Python dependencies
-      - run: sudo apt install binutils-mips-linux-gnu libprotobuf-dev libnl-route-3-dev protobuf-compiler
+      - run: sudo apt install binutils-mips-linux-gnu libprotobuf-dev libnl-route-3-dev protobuf-compiler wine
         name: Install dependencies
       - run: |
           git clone --recursive --branch=3.0 https://github.com/google/nsjail && cd nsjail
           make
           sudo cp nsjail /usr/bin/
         name: Install nsjail
-      - run: ./backend/compilers/download.sh
+      - run: ./backend/compilers/download.sh && ./backend/compilers/mwcc.sh
         name: Download compilers
       - run: python backend/manage.py test backend
         name: Run tests
+      - run: |
+          wget https://github.com/devkitPro/pacman/releases/download/v1.0.2/devkitpro-pacman.amd64.deb
+          apt install -y ./devkitpro-pacman.amd64.deb
+          dkp-pacman -Syu devkitPPC --noconfirm
+          sudo cp /opt/devkitpro/devkitPPC/bin/powerpc* /usr/bin/
+        name: Install dkp dependencies
         env:
           SYSTEM_ENV: GITHUB_WORKFLOW
 
