--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -25,25 +25,41 @@ jobs:
       - uses: actions/setup-python@v1
         with:
           python-version: 3.9
-      - run: pip install -r backend/requirements.txt
-        name: Install Python dependencies
-      - run: sudo apt install binutils-mips-linux-gnu libprotobuf-dev libnl-route-3-dev protobuf-compiler wine mesa-va-drivers- libosmesa6- mesa-vdpau-drivers-
-        name: Install dependencies
-      - run: |
-          git clone --recursive --branch=3.0 https://github.com/google/nsjail && cd nsjail
+      - name: Install Python dependencies
+        run: pip install -r backend/requirements.txt
+      - name: Add i386 architecture
+        run: |-
+          dpkg --add-architecture i386
+          apt-get update
+      - name: Install dependencies
+        run: |-
+          apt install \
+            binutils-mips-linux-gnu \
+            libprotobuf-dev \
+            libnl-route-3-dev \
+            protobuf-compiler \
+            wine \
+            mesa-va-drivers- \
+            libosmesa6- \
+            mesa-vdpau-drivers-
+      - name: Install nsjail
+        run: |-
+          git clone --recursive --branch=3.0 https://github.com/google/nsjail
+          cd nsjail
           make
-          sudo cp nsjail /usr/bin/
-        name: Install nsjail
-      - run: ./backend/compilers/download.sh && ./backend/compilers/mwcc.sh
-        name: Download compilers
-      - run: python backend/manage.py test backend
-        name: Run tests
-      - run: |
+          cp nsjail /usr/bin/
+      - name: Download compilers
+        run: |-
+          ./backend/compilers/download.sh
+          ./backend/compilers/mwcc.sh
+      - name: Install dkp dependencies
+        run: |-
           wget https://github.com/devkitPro/pacman/releases/download/v1.0.2/devkitpro-pacman.amd64.deb
           apt install -y ./devkitpro-pacman.amd64.deb
           dkp-pacman -Syu devkitPPC --noconfirm
-          sudo cp /opt/devkitpro/devkitPPC/bin/powerpc* /usr/bin/
-        name: Install dkp dependencies
+          cp /opt/devkitpro/devkitPPC/bin/powerpc* /usr/bin/
+      - name: Run tests
+        run: python backend/manage.py test backend
         env:
           SYSTEM_ENV: GITHUB_WORKFLOW
 
@@ -52,20 +68,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: docker build backend -t decompme_backend --build-arg ENABLE_GC_WII_SUPPORT=YES
-        name: Build decompme_backend image
-      - run: |
+      - name: Build decompme_backend image
+        run: |-
+          docker build backend \
+            -t decompme_backend \
+            --build-arg ENABLE_GC_WII_SUPPORT=YES
+      - name: Run tests
+        run: |-
           docker run \
-          --rm -ti \
-          -v $(pwd):/decomp.me \
-          --security-opt apparmor=unconfined \
-          --security-opt seccomp=unconfined \
-          --entrypoint /bin/bash \
-          -e COMPILER_BASE_PATH=/compilers \
-          decompme_backend
-
-          cd /decomp.me
-          python backend/manage.py test backend
+            -v $(pwd):/decomp.me \
+            --security-opt apparmor=unconfined \
+            --security-opt seccomp=unconfined \
+            --entrypoint /bin/bash \
+            -e COMPILER_BASE_PATH=/compilers \
+            decompme_backend -c 'cd /decomp.me && python backend/manage.py test backend'
 
   frontend_test:
     name: frontend tests
