fixup pr.yaml (attempt 4 of N)

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -62,16 +62,9 @@ RUN if [ "${ENABLE_PS1_SUPPORT}" = "YES" ] ; then \
     fi
 
 # gc/wii specifics
+COPY --from=devkitpro/devkitppc:20210726 /opt/devkitpro/devkitPPC/bin/powerpc* /usr/bin/
 RUN if [ "${ENABLE_GC_WII_SUPPORT}" = "YES" ] ; then \
-    bash /compilers/mwcc.sh && \
-    wget https://github.com/devkitPro/pacman/releases/download/v1.0.2/devkitpro-pacman.amd64.deb \
-        -O devkitpro.deb && \
-    echo ebc9f199da9a685e5264c87578efe29309d5d90f44f99f3dad9dcd96323fece3 devkitpro.deb | sha256sum --check && \
-    apt install -y ./devkitpro.deb && \
-    rm devkitpro.deb && \
-    dkp-pacman -Syu devkitPPC --noconfirm && \
-    cp /opt/devkitpro/devkitPPC/bin/powerpc* /usr/bin/ && \
-    rm -rf /opt/devkitpro; \
+    bash /compilers/mwcc.sh; \
     fi
 
 WORKDIR /backend
