--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -53,10 +53,13 @@ jobs:
           ./backend/compilers/mwcc.sh
       - name: Install dkp dependencies
         run: |-
-          wget https://github.com/devkitPro/pacman/releases/download/v1.0.2/devkitpro-pacman.amd64.deb
-          sudo apt install -y ./devkitpro-pacman.amd64.deb
-          sudo dkp-pacman -Syu devkitPPC --noconfirm
-          sudo cp /opt/devkitpro/devkitPPC/bin/powerpc* /usr/bin/
+          mkdir -p bin
+          docker run \
+            --rm -v $(pwd)/bin:/tmp/bin \
+            --entrypoint /bin/sh \
+            devkitpro/devkitppc:20210726 \
+            -c "cp /opt/devkitpro/devkitPPC/bin/powerpc* /tmp/bin"
+          sudo cp bin/powerpc* /usr/bin/
       - name: Run tests
         run: |-
           mkdir -p /tmp/wine
